force-app/main/default/objects/Lead/fields/Birthplace__c.field-meta.xml
<CustomField>
    <fullName>Birthplace__c</fullName>
    <label>Nation of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>