force-app/main/default/objects/Lead/fields/Birthplace_Customer_2__c.field-meta.xml
<CustomField>
    <fullName>Birthplace_Customer_2__c</fullName>
    <label>Nation of Birth Customer 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>