force-app/main/default/objects/Lead/fields/CitizenshipCustomer1__c.field-meta.xml
<CustomField>
    <fullName>CitizenshipCustomer1__c</fullName>
    <label>Citizenship Customer 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>