force-app/main/default/objects/Lead/fields/CitizenshipCustomer2__c.field-meta.xml
<CustomField>
    <fullName>CitizenshipCustomer2__c</fullName>
    <label>Citizenship Customer 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>