force-app/main/default/objects/Lead/fields/Codice_Fiscale__c.field-meta.xml
<CustomField>
    <fullName>Codice_Fiscale__c</fullName>
    <label>Codice Fiscale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>