force-app/main/default/objects/Lead/fields/Company_Details__c.field-meta.xml
<CustomField>
    <fullName>Company_Details__c</fullName>
    <label>Company Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>