force-app/main/default/objects/Lead/fields/Consenso_Email__c.field-meta.xml
<CustomField>
    <fullName>Consenso_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consenso Email</label>
    <type>Checkbox</type>
</CustomField>