force-app/main/default/objects/Lead/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <defaultValue>&apos;+&apos;</defaultValue>
    <label>Country Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>