force-app/main/default/objects/Lead/fields/Date_of_birth_customer_2__c.field-meta.xml
<CustomField>
    <fullName>Date_of_birth_customer_2__c</fullName>
    <label>Date of birth customer 2</label>
    <type>Date</type>
</CustomField>