force-app/main/default/objects/Lead/fields/Email_Customer_2__c.field-meta.xml
<CustomField>
    <fullName>Email_Customer_2__c</fullName>
    <label>Email Customer 2</label>
    <type>Email</type>
</CustomField>