force-app/main/default/objects/Lead/fields/Email_per_fatturazione__c.field-meta.xml
<CustomField>
    <fullName>Email_per_fatturazione__c</fullName>
    <label>Email per fatturazione</label>
    <type>Email</type>
</CustomField>