force-app/main/default/objects/Lead/fields/First_Name_Customer_2__c.field-meta.xml
<CustomField>
    <fullName>First_Name_Customer_2__c</fullName>
    <label>First Name Customer 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>