force-app/main/default/objects/Lead/fields/honeypot__c.field-meta.xml
<CustomField>
    <fullName>honeypot__c</fullName>
    <label>honeypot</label>
    <length>18</length>
    <type>Text</type>
</CustomField>