force-app/main/default/objects/Lead/fields/Last_Name_Customer_2__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Customer_2__c</fullName>
    <label>Last Name Customer 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>