force-app/main/default/objects/Lead/fields/Metodo_di_contatto_preferito__c.field-meta.xml
<CustomField>
    <fullName>Metodo_di_contatto_preferito__c</fullName>
    <label>Metodo di contatto preferito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Telefono ufficio</fullName>
            </value>
            <value>
                <fullName>Cellulare</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>DM su Instagram</fullName>
            </value>
            <value>
                <fullName>Telegram</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>