force-app/main/default/objects/Lead/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Interested in</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>