force-app/main/default/objects/Lead/fields/Sito_di_ingresso__c.field-meta.xml
<CustomField>
    <fullName>Sito_di_ingresso__c</fullName>
    <label>Sito di ingresso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fabiodex</fullName>
            </value>
            <value>
                <fullName>Tuscany Entertainement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>