force-app/main/default/objects/Lead/fields/Tech_Extended_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Tech_Extended_Event_Date__c</fullName>
    <label>Extended Event Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>