force-app/main/default/objects/Lead/fields/Type_of_Client__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Client__c</fullName>
    <label>Type of Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event Planner</fullName>
            </value>
            <value>
                <fullName>Wedding Planner</fullName>
            </value>
            <value>
                <fullName>Location Manager</fullName>
            </value>
            <value>
                <fullName>Private (Direct Client)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>