force-app/main/default/objects/Lead/fields/Ultima_chiamata_visita_vendita__c.field-meta.xml
<CustomField>
    <fullName>Ultima_chiamata_visita_vendita__c</fullName>
    <label>Ultima chiamata o visita di vendita</label>
    <type>Date</type>
</CustomField>