force-app/main/default/objects/Lead/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <description>Used on the second web-to-lead form, to identify the already existing Lead and update relevant information</description>
    <label>Unique Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>