force-app/main/default/objects/Lead/fields/Where_did_you_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>Where_did_you_hear_about_us__c</fullName>
    <label>Where did you hear about us?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Reference</valueSetName>
    </valueSet>
</CustomField>