force-app/main/default/objects/Lead/recordTypes/Lead_Formulario_Online.recordType-meta.xml
<RecordType>
    <fullName>Lead_Formulario_Online</fullName>
    <active>true</active>
    <businessProcess>Lead Formulario Online</businessProcess>
    <description>Record type used for leads coming through the web-to-lead form</description>
    <label>Lead da Formulario Online</label>
</RecordType>