force-app/main/default/objects/Lead/recordTypes/Wedding_planner_record_type_label.recordType-meta.xml
<RecordType>
    <fullName>Wedding_planner_record_type_label</fullName>
    <active>true</active>
    <businessProcess>Wedding Planner</businessProcess>
    <description>the lead record type - business</description>
    <label>Wedding planner record type label</label>
</RecordType>