force-app/main/default/objects/Lead/validationRules/No_bot.validationRule-meta.xml
<ValidationRule>
    <fullName>No_bot</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
				ISNEW(),
					!ISBLANK (honeypot__c)
					)</errorConditionFormula>
    <errorMessage>Sei stato identificato come un bot</errorMessage>
</ValidationRule>