force-app/main/default/objects/Lead/listViews/All_Leads_Closed_Today.listView-meta.xml
<ListView>
    <fullName>All_Leads_Closed_Today</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Languages__c</columns>
    <columns>LEAD.RATING</columns>
    <columns>Type_of_Client__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Unqualified</value>
    </filters>
    <label>All Leads Closed today</label>
</ListView>