force-app/main/default/objects/Lead/listViews/Lead_da_Web_to_Lead.listView-meta.xml
<ListView>
    <fullName>Lead_da_Web_to_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Event_Start_Date__c</columns>
    <columns>Event_End_Date__c</columns>
    <columns>Location__c</columns>
    <columns>Number_of_Guests__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Lead_Formulario_Online</value>
    </filters>
    <label>Lead da Web-to-Lead</label>
</ListView>